--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Zupa Romana</title>
+    <title>Unicorn</title>
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-Coś z mojej strony!!!
+<img src="logo.png" id="logo">
+<div id="menu">
+    <a href="/main" class="menu-button">Strona Główna</a>
+    <a href="/kontakt" class="menu-button">Kontakt</a>
+</div>
+<div id="content">
+
+</div>
 </body>
 </html>
