--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -18,4 +18,9 @@ a{
     font-size: 50px;
     color: black;
     margin: 15px 25px;
+    transition: color 1s;
+}
+
+.menu-button:hover{
+    color: red;
 }
