--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://wwww.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Unicorn</title>
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-<img src="logo.png" id="logo">
-<div id="menu">
-    <a href="/main" class="menu-button">Strona Główna</a>
-    <a href="/kontakt" class="menu-button">Kontakt</a>
-</div>
+<div th:replace="fragments.html :: logo"></div>
+<div th:replace="fragments.html :: menu"></div>
 <div id="content">
 
 </div>
