--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -2,11 +2,12 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Unicorn</title>
+    <title>Kontakt</title>
     <link rel="stylesheet" href="/contact.css">
     <link rel="stylesheet" href="/commons.css">
 </head>
 <body>
+
 <div th:replace="fragments.html :: logo"></div>
 <div th:replace="fragments.html :: menu"></div>
 <div id="content">
@@ -15,5 +16,6 @@
     NIP: 1234567889<br>
     Zupa Romana<br>
 </div>
+
 </body>
 </html>
