--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,13 +2,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Nie widzisz tego</title>
 </head>
 <body>
+
 <img alt="" id="logo" src="/logo.png" th:fragment="logo">
 <div id="menu" th:fragment="menu">
     <a href="/main" class="menu-button">Strona Główna</a>
     <a href="/contact" class="menu-button">Kontakt</a>
+    <a href="/test" class="menu-button">XAMPP</a>
 </div>
+
 </body>
 </html>
