--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,10 +7,20 @@
     <link rel="stylesheet" href="/commons.css">
 </head>
 <body>
+
 <div th:replace="fragments.html :: logo"></div>
 <div th:replace="fragments.html :: menu"></div>
 <div id="content">
-
+    <th:block th:each="book : ${books}">
+        <div class="book">
+            <div th:text="${book.title}"></div>
+            <div th:text="${book.author}"></div>
+            <div th:text="${book.isbn}"></div>
+            <div th:text="${book.price}"></div>
+            <div th:text="${book.pieces}"></div>
+        </div>
+    </th:block>
 </div>
+
 </body>
 </html>
