--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<img alt="" id="logo" src="/logo.png" th:fragment="logo">
-<div id="menu" th:fragment="menu">
+<img th:fragment="logo" id="logo" src="/logo.png" alt="">
+<div th:fragment="menu" id="menu">
     <a href="/main" class="menu-button">Strona Główna</a>
     <a href="/contact" class="menu-button">Kontakt</a>
     <a href="/test" class="menu-button">XAMPP</a>
