--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Nie widzisz tego</title>
+    <link rel="stylesheet" href="/commons.css">
 </head>
 <body>
 
 <img th:fragment="logo" id="logo" src="/logo.png" alt="">
+
 <div th:fragment="menu" id="menu">
     <a href="/main" class="menu-button">Strona Główna</a>
     <a href="/contact" class="menu-button">Kontakt</a>
-    <a href="/test" class="menu-button">XAMPP</a>
+    <a href="/login" class="menu-button">Logowanie</a>
+    <a href="/test" target="_blank" class="menu-button">XAMPP</a>
 </div>
 
 </body>
