--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,14 +10,17 @@
 
 <div th:replace="fragments.html :: logo"></div>
 <div th:replace="fragments.html :: menu"></div>
+
 <div id="content">
     <th:block th:each="book : ${books}">
-        <div class="book">
-            <div th:text="${book.title}"></div>
-            <div th:text="${book.author}"></div>
-            <div th:text="${book.isbn}"></div>
-            <div th:text="${book.price}"></div>
-            <div th:text="${book.pieces}"></div>
+        <div class="book-box">
+            <div class="title-box" th:text="${book.title}"></div>
+            <div class="author-box" th:text="${book.author}"></div>
+            <div class="book-data-box">
+                <div th:text="'ISBN: ' + ${book.isbn}"></div>
+                <div th:text="'Cena: ' + ${book.price} + 'zł'"></div>
+                <div th:text="'Ilość: ' + ${book.pieces}"></div>
+            </div>
         </div>
     </th:block>
 </div>
