--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,8 +12,11 @@
 <div th:fragment="menu" id="menu">
     <a href="/main" class="menu-button">Strona Główna</a>
     <a href="/contact" class="menu-button">Kontakt</a>
+    <a href="/XAMPP" target="_blank" class="menu-button">XAMPP</a>
+    <br>
+    <a href="/koszyk" class="menu-button">Koszyk</a>
     <a href="/login" class="menu-button">Logowanie</a>
-    <a href="/test" target="_blank" class="menu-button">XAMPP</a>
+    <a href="/logout" class="menu-button">Wylogowanie</a>
 </div>
 
 </body>
