--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,8 +12,8 @@
 <div th:replace="fragments.html :: menu"></div>
 
 <form id="login-form" method="post"> <!--jak wysłać na inny adres to dodać: action="/login"-->
-    <input type="text" placeholder="Login" name="login">
-    <input type="password" placeholder="Hasło" name="pass">
+    <input type="text" placeholder="Login" th:field="*{userModel.login}">
+    <input type="password" placeholder="Hasło" th:field="*{userModel.pass}">
     <input type="submit" value="Zaloguj">
 </form>
 
