--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,7 @@
     <input type="text" placeholder="Login" th:field="*{userModel.login}">
     <input type="password" placeholder="Hasło" th:field="*{userModel.pass}">
     <input type="submit" value="Zaloguj">
+    <a href="/register" id="register-link" th:if="${!isLogged}">Zarejestruj</a>
 </form>
 
 </body>
