--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ThymeleafVariablesResolveInspection -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -12,11 +13,11 @@
 <div th:fragment="menu" id="menu">
     <a href="/main" class="menu-button">Strona Główna</a>
     <a href="/contact" class="menu-button">Kontakt</a>
-    <a href="/XAMPP" target="_blank" class="menu-button">XAMPP</a>
+    <a href="/XAMPP" class="menu-button" target="_blank">XAMPP</a>
     <br>
     <a href="/koszyk" class="menu-button">Koszyk</a>
-    <a href="/login" class="menu-button">Logowanie</a>
-    <a href="/logout" class="menu-button">Wylogowanie</a>
+    <a href="/login" class="menu-button" th:if="${!isLogged}">Zaloguj</a>
+    <a href="/logout" class="menu-button" th:if="${isLogged}">Wyloguj</a>
 </div>
 
 </body>
