--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,6 +5,7 @@
     <title>Rejestracja</title>
     <link rel="stylesheet" href="/register.css">
     <link rel="stylesheet" href="/commons.css">
+    <link rel="stylesheet" href="/commonsForm.css">
     <script src="/registerValidator.js"></script>
 </head>
 <body>
