--- a/src/main/resources/templates/koszyk.html
+++ b/src/main/resources/templates/koszyk.html
@@ -12,7 +12,30 @@
 <div th:replace="fragments.html :: menu"></div>
 
 <div id="content">
-    To twój koszyk.
+
+    <div class="header">
+        <div class="title">Tytuł</div>
+        <div class="pieces">Ilość</div>
+        <div class="price">Cena za sztukę</div>
+        <div class="total">Cena</div>
+    </div>
+
+    <th:block th:each="book : ${books}">
+        <div class="row">
+            <div class="title" th:text="${book.title}"></div>
+            <div class="pieces" th:text="${book.pieces}"></div>
+            <div class="price" th:text="${book.price} + ' zł'"></div>
+            <div class="total" th:text="${book.price} * ${book.pieces} + ' zł'"></div>
+        </div>
+    </th:block>
+
+    <div>
+        <div class="title"></div>
+        <div class="pieces"></div>
+        <div class="price">Suma: </div>
+        <div class="total" th:text="${suma} + ' zł'"></div>
+    </div>
+
 </div>
 
 </body>
