--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -23,3 +23,25 @@
     display: inline-block;
     margin-right: 50px;
 }
+
+.buy-button{
+    width: 50px;
+    height: 50px;
+    float: right;
+    margin-top: -100px;
+    margin-right: 10px;
+    display: inline-block;
+    background-size: contain;
+    background-image: url("add-to-basket.png");
+}
+
+.edit-button{
+    width: 50px;
+    height: 50px;
+    float: right;
+    margin-top: -100px;
+    margin-right: -100px;
+    display: inline-block;
+    background-size: contain;
+    background-image: url("edit.png");
+}
