--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,9 +14,10 @@
 <div th:replace="fragments.html :: menu"></div>
 
 <form id="register-form" method="post" onsubmit="return validate()">
-    <input type="text" placeholder="Login" th:field="*{userModel.login}" id="login">
-    <input type="password" placeholder="Hasło" th:field="*{userModel.pass}" id="pass">
-    <input type="password" placeholder="Powtórz Hasło" id="pass2">
+    <p th:if="${info}" th:text="${info}" id="error"></p>
+    <input type="text" placeholder="Login" th:field="*{RegistrationModel.login}" id="login">
+    <input type="password" placeholder="Hasło" th:field="*{RegistrationModel.pass}" id="pass">
+    <input type="password" placeholder="Powtórz Hasło" th:field="*{RegistrationModel.pass2}" id="pass2">
     <input type="submit" value="Zarejestruj">
 </form>
 
