--- a/src/main/resources/templates/koszyk.html
+++ b/src/main/resources/templates/koszyk.html
@@ -29,10 +29,10 @@
         </div>
     </th:block>
 
-    <div>
+    <div class="row">
         <div class="title"></div>
         <div class="pieces"></div>
-        <div class="price">Suma: </div>
+        <div class="price">Suma:</div>
         <div class="total" th:text="${suma} + ' zł'"></div>
     </div>
 
