--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -14,9 +14,10 @@
 
 <div id="content">
     <form method="post">
+        <input type="text" th:field="*{book.id}" disabled>
         <input type="text" th:field="*{book.title}">
         <input type="text" th:field="*{book.author}">
-        <input type="text" th:field="*{book.isbn}" disabled>
+        <input type="text" th:field="*{book.isbn}">
         <input type="text" th:field="*{book.price}">
         <input type="text" th:field="*{book.pieces}">
         <input type="submit">
