--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -14,7 +14,7 @@
 
 <div id="content">
     <form method="post">
-        <input type="text" th:field="*{book.id}" disabled>
+        <input type="text" th:field="*{book.id}" readonly>
         <input type="text" th:field="*{book.title}">
         <input type="text" th:field="*{book.author}">
         <input type="text" th:field="*{book.isbn}">
